//
// Copyright (c) 2023  Ralph Rogge.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

#ifndef DELTA_T_SENSOR_NODE_PUBLISH_SENSOR_DATA_INTERACTOR_H
#define DELTA_T_SENSOR_NODE_PUBLISH_SENSOR_DATA_INTERACTOR_H

#include "publish_sensor_data_input_boundary.h"
#include "publish_sensor_data_message_queue.h"
#include "publish_sensor_data_output_boundary.h"
#include "publish_sensor_data_request.h"
#include "publish_sensor_data_sensor.h"

/**
 * @brief This class implements the "Publish Sensor Data" use case interactor.
 *
 * Please checkout [clean architecture](https://github.com/r42sys/clean-architecture) for more details on interactors.
 */
class PublishSensorDataInteractor : public PublishSensorDataInputBoundary {
public:

    /**
     * @param presenter The "Publish Sensor Data" presenter.
     * @param sensor The "Publish Sensor Data" sensor.
     * @param message_queue The "Publish Sensor Data" message queue.
     */
    explicit PublishSensorDataInteractor(PublishSensorDataOutputBoundary &presenter, PublishSensorDataSensor &sensor, PublishSensorDataMessageQueue &message_queue);

    /**
     * @brief Execute the "Publish Sensor Data" use case request.
     * @param request The "Publish Sensor Data" request.
     */
    void execute(PublishSensorDataRequest &request) override;

private:

    PublishSensorDataMessageQueue &_message_queue;
    PublishSensorDataOutputBoundary &_presenter;
    PublishSensorDataSensor &_sensor;
};

#endif // DELTA_T_SENSOR_NODE_PUBLISH_SENSOR_DATA_INTERACTOR_H
